[metadata]
name = kobushi-trackviewer
version = attr: kobushiM._version.__version__
description = Trackviewer for BVE trainsim 5/6
long_description = file: README.md
long_description_content_type = text/markdown
keywords = BVE trainsim
license = Apache License 2.0
author = Konawasabi
author_email = webmaster@konawasabi.riceball.jp
url=https://github.com/konawasabi/kobushi-trackviewer/

[options]
packages = find:
python_requires = >=3.9
install_requires =
    scipy >= 1.13.0
    PyQt6 >= 6.6.0
    pyqtgraph >= 0.13.7
    Pillow >= 9.0.0
    lark >= 1.1.9
include_package_data = True
