[package]
name = "kobushi_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui-wgpu = "0.31"
wgpu = "24"
winit = "0.30"
nom = { version = "7", optional = true }
rayon = "1.10"
glam = "0.29"
rfd = "0.15"
encoding_rs = "0.8"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
lazy_static = "1.5"

[features]
default = ["nom"]
